--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
         />
-        <link rel="stylesheet" href="./assets/index.css" />
+        <link rel="stylesheet" href="./styles/index.css" />
         <title>PlatziMediaPlayer.js</title>
     </head>
 
@@ -19,12 +19,14 @@
         </header>
 
         <main class="container">
-            <video class="movie">
+            <video preload="auto" class="movie">
                 <source src="./assets/BigBuckBunny.mp4" />
             </video>
 
             <button>Play/Pause</button>
         </main>
+
         <script src="./src/index.js"></script>
     </body>
+
 </html>
