--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button>Play/Pause</button>
         </main>
 
-        <script src="./src/index.js"></script>
+        <script type="module" src="./src/index.mjs"></script>
     </body>
 
 </html>
