--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </video>
 
             <button>Play/Pause</button>
+            <button id="buttonMuteUnmute">Mute/Unmute</button>
         </main>
 
         <script type="module" src="./src/index.mjs"></script>
