Clase N°29: Convertir el proyecto a TypeScript.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <source src="./assets/BigBuckBunny.mp4" />
             </video>
 
-            <button>Play/Pause</button>
-            <button id="buttonMuteUnmute">Mute/Unmute</button>
+            <button id="playButton">Play/Pause</button>
+            <button id="muteButton">Mute/Unmute</button>
 
             <h2>Comments</h2>
             <ul>
@@ -286,7 +286,7 @@
             </ul>
         </main>
 
-        <script type="module" src="./src/index.mjs"></script>
+        <script type="module" src="./src/index.js"></script>
     </body>
 </html>
 <!DOCTYPE html>
