Clase N°40: Implementación de plugin de Ads: Desplegando en pantalla.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
 
         <main class="container">
-            <video preload="auto" class="movie">
+            <video preload="auto" class="movie" controls>
                 <source src="./assets/BigBuckBunny.mp4" />
             </video>
 
